--- a/jenkinsPlugins2nix.cabal
+++ b/jenkinsPlugins2nix.cabal
@@ -1,5 +1,5 @@
 name:                jenkinsPlugins2nix
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Generate nix for Jenkins plugins.
 description:         Generate nix for Jenkins plugins.
 homepage:            https://github.com/Fuuzetsu/jenkinsPlugins2nix#readme
@@ -39,7 +39,9 @@ executable jenkinsPlugins2nix
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , ansi-wl-pprint
+                     , bimap
                      , jenkinsPlugins2nix
+                     , optparse-applicative
                      , text
   default-language:    Haskell2010
 
