--- a/jenkinsPlugins2nix.cabal
+++ b/jenkinsPlugins2nix.cabal
@@ -19,16 +19,16 @@ library
                        Nix.JenkinsPlugins2Nix.Parser
                        Nix.JenkinsPlugins2Nix.Types
   build-depends:       base >= 4.7 && < 5
-                     , ansi-wl-pprint
-                     , attoparsec
-                     , bytestring
-                     , containers
-                     , cryptohash
-                     , hnix
-                     , http-conduit
-                     , mtl
-                     , text
-                     , zip-archive
+                     , ansi-wl-pprint >=0.6  && <0.7
+                     , attoparsec     >=0.13 && <0.14
+                     , bytestring     >=0.10 && <0.11
+                     , containers     >=0.5  && <0.6
+                     , cryptohash     >=0.11 && <0.12
+                     , hnix           >=0.5  && <0.6
+                     , http-conduit   >=2.3  && <2.4
+                     , mtl            >=2.2  && <2.3
+                     , text           >=1.2  && <1.3
+                     , zip-archive    >=0.3  && <0.4
   default-language:    Haskell2010
   ghc-options:        -Wall
 
@@ -38,9 +38,9 @@ executable jenkinsPlugins2nix
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , ansi-wl-pprint
-                     , bimap
+                     , bimap                >=0.3  && <0.4
                      , jenkinsPlugins2nix
-                     , optparse-applicative
+                     , optparse-applicative >=0.14 && <0.15
                      , text
   default-language:    Haskell2010
 
@@ -52,7 +52,7 @@ test-suite jenkinsPlugins2nix-test
   build-depends:       base
                      , containers
                      , jenkinsPlugins2nix
-                     , tasty-hspec
+                     , tasty-hspec         >=1.1 && <1.2
                      , text
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
