--- a/jenkinsPlugins2nix.cabal
+++ b/jenkinsPlugins2nix.cabal
@@ -1,5 +1,5 @@
 name:                jenkinsPlugins2nix
-version:             0.2.0.2
+version:             0.3.0.0
 synopsis:            Generate nix for Jenkins plugins.
 description:         Generate nix for Jenkins plugins.
 homepage:            https://github.com/Fuuzetsu/jenkinsPlugins2nix#readme
@@ -19,16 +19,16 @@ library
                        Nix.JenkinsPlugins2Nix.Parser
                        Nix.JenkinsPlugins2Nix.Types
   build-depends:       base           >=4.7  && < 5
-                     , ansi-wl-pprint >=0.6  && <0.7
                      , attoparsec     >=0.13 && <0.14
                      , bytestring     >=0.10 && <0.11
-                     , containers     >=0.5  && <0.6
+                     , containers     >=0.6  && <0.7
                      , cryptohash     >=0.11 && <0.12
-                     , hnix           >=0.5  && <0.6
+                     , hnix           >=0.6  && <0.7
                      , http-conduit   >=2.3  && <2.4
                      , mtl            >=2.2  && <2.3
+                     , prettyprinter  >=1.2  && <1.3
                      , text           >=1.2  && <1.3
-                     , zip-archive    >=0.3  && <0.4
+                     , zip-archive    >=0.4  && <0.5
   default-language:    Haskell2010
   ghc-options:        -Wall
 
@@ -37,10 +37,10 @@ executable jenkinsPlugins2nix
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
-                     , ansi-wl-pprint
-                     , bimap                >=0.3  && <0.4
+                     , bimap                       >=0.3  && <0.4
                      , jenkinsPlugins2nix
-                     , optparse-applicative >=0.14 && <0.15
+                     , optparse-applicative        >=0.14 && <0.15
+                     , prettyprinter-ansi-terminal >=1.1  && <1.2
                      , text
   default-language:    Haskell2010
 
