--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,13 @@
-resolver: lts-8.14
+resolver: lts-13.19
 
 packages:
   - '.'
 extra-deps:
-  - hnix-0.3.4
+  - hnix-0.6.1
+  - hashing-0.1.0.1@sha256:98861f16791946cdf28e3c7a6ee9ac8b72d546d6e33c569c7087ef18253294e7
+  - hnix-store-core-0.1.0.0@sha256:719a261870367b3ce2e2e8d11502e7170faa664109a14486b95b555bc3672807
+  - monadlist-0.0.2@sha256:978305e3f03dd5f65c673b551124dac0c39a247c2c14d84739ca9a3405fbb63a
+  - ref-tf-0.4.0.1@sha256:369e5c6237e4b6fe330fde021b94a9f98971690cbec5b910faa9af3cbcb15610
 
 flags: {}
 
