--- a/jenkinsPlugins2nix.cabal
+++ b/jenkinsPlugins2nix.cabal
@@ -1,5 +1,5 @@
 name:                jenkinsPlugins2nix
-version:             0.5.0.0
+version:             0.5.0.1
 synopsis:            Generate nix for Jenkins plugins.
 description:         Generate nix for Jenkins plugins.
 homepage:            https://github.com/Fuuzetsu/jenkinsPlugins2nix#readme
@@ -20,7 +20,7 @@ library
                        Nix.JenkinsPlugins2Nix.Parser
                        Nix.JenkinsPlugins2Nix.Types
   build-depends:       base           >=4.7  && < 5
-                     , attoparsec     >=0.13 && <0.14
+                     , attoparsec     >=0.13 && <0.15
                      , bytestring     >=0.10 && <0.11
                      , containers     >=0.6  && <0.7
                      , cryptonite     >=0.24 && <0.30
@@ -53,7 +53,8 @@ test-suite jenkinsPlugins2nix-test
   build-depends:       base
                      , containers
                      , jenkinsPlugins2nix
-                     , tasty-hspec         >=1.1 && <1.2
+                     , hspec
+                     , tasty-hspec         >=1.1 && <1.3
                      , text
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
